<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">

        <EditText
            android:id="@+id/message_text"
            android:layout_height="wrap_content"
        	android:layout_width="0dp"
        	android:layout_weight="0.7"
            android:hint="@string/message_edit_text"
            android:inputType="text"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"  />
            
        <Button
        	android:id="@+id/send_button"
        	android:layout_height="wrap_content"
        	android:layout_width="0dp"
        	android:layout_weight="0.3"
        	android:text="@string/send_label"
            android:textAppearance="?android:attr/textAppearanceMedium"  />

    </LinearLayout>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/messages"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="center_horizontal" />

    <ListView
        android:id="@+id/msgList"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll" >
    </ListView>

</LinearLayout>